--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,5 +79,8 @@ dependencies {
     implementation "android.arch.navigation:navigation-ui-ktx:$nav_version"
 
     // Fuel
-    implementation 'com.github.kittinunf.fuel:fuel-coroutines:1.14.0'
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.14.0'
+
+    // Internet connection checker
+    implementation 'com.treebo:internetavailabilitychecker:1.0.1'
 }
