--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.minosai.oneclick">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
@@ -34,11 +36,16 @@
 
         </service>
 
-        <!--<receiver android:name=".util.receiver.WifiReceiver" android:enabled="true">-->
-            <!--<intent-filter android:priority="100">-->
-                <!--<action android:name="android.net.wifi.WIFI_STATE_CHANGED_ACTION" />-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
+        <receiver android:name=".util.receiver.WifiReceiver">
+            <intent-filter android:priority="999">
+                <action android:name="android.net.wifi.STATE_CHANGE"/>
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED"/>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                <action android:name="android.net.wifi.supplicant.CONNECTION_CHANGE"/>
+            </intent-filter>
+        </receiver>
+
+        <!--<service android:name=".util.service.WifiService"> </service>-->
 
     </application>
 
