--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,13 @@
     package="com.minosai.oneclick">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
-        android:allowBackup="true"
         android:name=".OneClickApp"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -25,27 +24,35 @@
         </activity>
 
         <service
-            android:name="com.minosai.oneclick.util.service.OneClickTileService"
+            android:name=".util.service.OneClickTileService"
             android:icon="@drawable/ic_login"
             android:label="One Click"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
-
             <intent-filter>
-                <action android:name="android.service.quicksettings.action.QS_TILE"/>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
-
         </service>
 
-        <receiver android:name=".util.receiver.WifiReceiver">
-            <intent-filter android:priority="999">
-                <action android:name="android.net.wifi.STATE_CHANGE"/>
-                <action android:name="android.net.wifi.WIFI_STATE_CHANGED"/>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
-                <action android:name="android.net.wifi.supplicant.CONNECTION_CHANGE"/>
-            </intent-filter>
-        </receiver>
+        <!--<receiver android:name=".util.receiver.WifiReceiver">-->
+            <!--<intent-filter android:priority="999">-->
+                <!--<action android:name="android.net.wifi.STATE_CHANGE" />-->
+                <!--<action android:name="android.net.wifi.WIFI_STATE_CHANGED" />-->
+                <!--<action android:name="android.net.conn.CONNECTIVITY_CHANGE" />-->
+                <!--<action android:name="android.net.wifi.supplicant.CONNECTION_CHANGE" />-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
 
-        <!--<service android:name=".util.service.WifiService"> </service>-->
+        <!-- <service android:name=".util.service.WifiService"> </service> -->
+
+        <receiver android:name=".ui.widget.OneClickWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/one_click_widget_info" />
+        </receiver>
 
     </application>
 
