--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     def lifecycle_version = "1.1.1"
     def room_version = "1.1.0"
     def nav_version = "1.0.0-alpha01"
+    def paging_version = "1.0.0"
 
     // Room
     implementation "android.arch.persistence.room:runtime:$room_version"
@@ -73,6 +74,9 @@ dependencies {
     // ViewModel + LiveData
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     kapt "android.arch.lifecycle:compiler:$lifecycle_version"
+
+    // Paging
+    implementation "android.arch.paging:runtime:$paging_version"
 
     // Navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:$nav_version"
