--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,7 @@ dependencies {
     // Internet connection checker
     implementation 'com.treebo:internetavailabilitychecker:1.0.1'
     implementation 'com.android.support:cardview-v7:28.0.0-alpha3'
+
+    // Jsoup
+    implementation 'org.jsoup:jsoup:1.11.3'
 }
