--- a/.travis.yml
+++ b/.travis.yml
@@ -1,55 +1,39 @@
-sudo: false
 language: android
 jdk: oraclejdk8
-before_cache:
- - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
- - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
-cache:
- directories:
- - $HOME/.gradle/caches/
- - $HOME/.gradle/wrapper/
 env:
-  global:
-   - ANDROID_API_LEVEL=25
-   - EMULATOR_API_LEVEL=21
-   - ANDROID_BUILD_TOOLS_VERSION=25.0.2
-   - ANDROID_ABI=google_apis/armeabi-v7a
-   - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
+  - ANDROID_EMULATOR_API_LEVEL=19
 
 android:
   components:
-    - tools
-    - platform-tools
+    - tools # to get the new `repository-11.xml`
+    - tools # to install Android SDK tools 25+, latest, cannot get more granular control than this
+    # See https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943 for more
+    # details.
+    - platform-tools #latest
     - build-tools-25.0.2
     - android-25
-    - extra-google-m2repository
     - extra-android-m2repository
-    # Google Play Services
-    - extra-google-google_play_services
-    # Support library
     - extra-android-support
+    - sys-img-armeabi-v7a-android-19
+  licenses:
+    - 'android-sdk-license-.+'
 
-    - addon-google_apis-google-$ANDROID_API_LEVEL
-    - addon-google_apis-google-$EMULATOR_API_LEVEL
-
-    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
-    - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
 before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
-script:
-        - ./gradlew clean
-        - ./gradlew assembleDebug
-        - ./gradlew assembleDebugAndroidTest
-before_install:
-          - mkdir "$ANDROID_HOME/licenses" || true
-          - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
-          - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
-          - chmod +x gradlew
+  - echo y | android update sdk --no-ui --all --filter extra-android-m2repository
+  - echo y | android update sdk --no-ui --all --filter extra-android-support
+  - echo y | android update sdk --no-ui --all --filter "android-$ANDROID_EMULATOR_API_LEVEL"
+  - echo y | android update sdk --no-ui --all --filter build-tools-25.0.2
+  - echo y | android update sdk --no-ui --all --filter "sys-img-armeabi-v7a-android-$ANDROID_EMULATOR_API_LEVEL"
+  - echo no | android create avd --force -n test -t "android-$ANDROID_EMULATOR_API_LEVEL" --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
 
-branches:
-        only:
-                - master
+script:
+  - ./gradlew build lint test assembleAndroidTest -PdisablePreDex;
+  - android-wait-for-emulator
+  # Unlock the device
+  - adb shell input keyevent 82
+  # Avoid having it lock itself again.
+  - adb shell svc power stayon true
+  # Make gradle output info-level logging, so the tests do not timeout
+- ./gradlew connectedCheck --info -PdisablePreDex;
