--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,34 @@
-language: android
-android:
-        components:
-                - platform-tools
-                - build-tools-28.0.3
-                - android-28
-                - extra-android-m2repository
-script:
-        - ./gradlew build
+sudo : required
+jdk : oraclejdk8
+env:
+  global :
+    - ANROID_API_LEVEL = "28"
+    - ANDROID_BUILD_TOOLS_VERSION = "28.0.3"
+android :
+  components :
+    - tools
+    - platform-tools
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android - $ANDROID_API_LEVEL
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - addon-google_apis-google-$ANDROID_API_LEVEL
+  licences :
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+before_script :
+        - mkdir -p "$ANDROID_HOME/licenses"
+        - cp ./licenses/* "$ANDROID_HOME/licenses"
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
+script :
+    - ./gradlew build check
 before_install:
-        - chmod +x gradlew
-branches:
-        only:
-                - master
+- chmod +x gradlew
