--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,7 @@ dependencies {
 
     // Android MDC
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.android.support:design:28.0.0'
 }
 //kotlin {
 //    experimental {
