--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,6 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
     implementation 'androidx.preference:preference:1.1.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
@@ -52,17 +51,17 @@ dependencies {
     kapt "com.google.dagger:dagger-android-support:$dagger_version"
 
     // RetroFit
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
 
     // GSON
-    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.23.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.19.3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
 
     // Anko - DOES NOT WORK WITH ANDROIDX
 
@@ -70,9 +69,9 @@ dependencies {
 
     //    implementation "org.jetbrains.anko:anko-design:$anko_version" // For SnackBars
     def lifecycle_version = "2.0.0"
-    def room_version = "2.1.0-alpha03"
-    def nav_version = "1.0.0-alpha08"
-    def paging_version = "2.1.0-rc01"
+    def room_version = "2.1.0-alpha04"
+    def nav_version = "1.0.0"
+    def paging_version = "2.1.0"
     def work_version = "1.0.0-alpha13"
     def futures_version = "1.0.0-alpha02"
 
