--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:usesCleartextTraffic="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -68,10 +69,10 @@
 
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/one_click_widget_info" />w
+                android:resource="@xml/one_click_widget_info" />
         </receiver>
 
-        <activity android:name=".ui.preferences.SettinngsActivity"></activity>
+        <!--<activity android:name=".ui.preferences.SettinngsActivity"></activity>-->
     </application>
 
 </manifest>
