--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,11 @@ apply plugin: 'kotlin-kapt'
 ext.anko_version = '0.10.8'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.minosai.oneclick"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "0.2.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -69,7 +69,7 @@ dependencies {
 
     //    implementation "org.jetbrains.anko:anko-design:$anko_version" // For SnackBars
     def lifecycle_version = "2.0.0"
-    def room_version = "2.1.0-alpha04"
+    def room_version = "2.1.0"
     def nav_version = "1.0.0"
     def paging_version = "2.1.0"
     def work_version = "1.0.0-alpha13"
@@ -113,7 +113,7 @@ dependencies {
 
     // Android MDC
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:design:29.0.0'
 }
 //kotlin {
 //    experimental {
