--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.minosai.oneclick">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -9,18 +10,21 @@
 
     <application
         android:name=".OneClickApp"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:usesCleartextTraffic="true"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        tools:ignore="GoogleAppIndexingWarning">
+
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES"/>
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -31,18 +35,18 @@
                 android:resource="@xml/shortcuts" />
         </activity>
 
-        <!--TODO: Move this inside MainActivity so that it can be version checked-->
+        <!-- TODO: Move this inside MainActivity so that it can be version checked -->
         <service
             android:name=".util.service.OneClickTileService"
             android:icon="@drawable/ic_login"
             android:label="One Click"
+            android:enabled="true"
+            android:exported="true"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
-        </service>
-
-        <!-- <receiver android:name=".util.receiver.WifiReceiver"> -->
+        </service> <!-- <receiver android:name=".util.receiver.WifiReceiver"> -->
         <!-- <intent-filter android:priority="999"> -->
         <!-- <action android:name="android.net.wifi.STATE_CHANGE" /> -->
         <!-- <action android:name="android.net.wifi.WIFI_STATE_CHANGED" /> -->
@@ -50,8 +54,6 @@
         <!-- <action android:name="android.net.wifi.supplicant.CONNECTION_CHANGE" /> -->
         <!-- </intent-filter> -->
         <!-- </receiver> -->
-
-
         <!-- <service android:name=".util.service.WifiService"> </service> -->
 
         <receiver
@@ -72,7 +74,13 @@
                 android:resource="@xml/one_click_widget_info" />
         </receiver>
 
-        <!--<activity android:name=".ui.preferences.SettinngsActivity"></activity>-->
+        <service
+            android:name=".util.service.FcmService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
