fix qstile icon in edit screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
 
         <service
             android:name=".util.service.OneClickTileService"
-            android:icon="@drawable/ic_login"
+            android:icon="@drawable/ic_qstile"
             android:label="Login"
             android:enabled="true"
             android:exported="true"
