--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.minosai.oneclick">
 
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
 
     <application
         android:name=".OneClickApp"
@@ -25,7 +26,7 @@
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES"/>
+                <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -36,17 +37,13 @@
                 android:resource="@xml/shortcuts" />
         </activity>
 
-        <service
-            android:name=".util.service.OneClickTileService"
-            android:icon="@drawable/ic_qstile"
-            android:label="Login"
-            android:enabled="true"
-            android:exported="true"
-            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+        <receiver
+            android:name=".util.receiver.LoginLogoutReceiver"
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.service.quicksettings.action.QS_TILE" />
+                <action android:name="com.minosai.oneclick.action.LOGIN_LOGOUT_ACTION" />
             </intent-filter>
-        </service> <!-- <receiver android:name=".util.receiver.WifiReceiver"> -->
+        </receiver> <!-- <receiver android:name=".util.receiver.WifiReceiver"> -->
         <!-- <intent-filter android:priority="999"> -->
         <!-- <action android:name="android.net.wifi.STATE_CHANGE" /> -->
         <!-- <action android:name="android.net.wifi.WIFI_STATE_CHANGED" /> -->
@@ -55,14 +52,6 @@
         <!-- </intent-filter> -->
         <!-- </receiver> -->
         <!-- <service android:name=".util.service.WifiService"> </service> -->
-
-        <receiver
-            android:name=".util.receiver.LoginLogoutReceiver"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.minosai.oneclick.action.LOGIN_LOGOUT_ACTION" />
-            </intent-filter>
-        </receiver>
 
         <receiver android:name=".ui.widget.OneClickWidget">
             <intent-filter>
@@ -75,6 +64,18 @@
         </receiver>
 
         <service
+            android:name=".util.service.OneClickTileService"
+            android:enabled="true"
+            android:exported="true"
+            android:icon="@drawable/ic_qstile"
+            android:label="Login"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
+
+        <service
             android:name=".util.service.FcmService"
             android:exported="false">
             <intent-filter>
@@ -82,5 +83,7 @@
             </intent-filter>
         </service>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
